fix spacing issues, footer, titles

--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
 }
+
 html {
   font-family: Roboto, Cabin, OpenSans;
 }
@@ -23,6 +24,11 @@ header {
   background-image: url(/design/background_shape_1.svg);
   /* background-size: cover; */
 
+  flex-direction: column;
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: repeat-x;
+
   width: 100%;
   height: 59px;
 
@@ -33,15 +39,19 @@ header {
   color: var(--header-font-color);
 }
 
+.page-head {
+  margin-bottom: 3px;
+}
+
 main {
   overflow-y: scroll;
 
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 1rem;
 
-  background: var(--main-bg-color);
+  padding: 2rem 0 1rem 0;
+
   color: var(--main-font-color);
   font-size: var(--main-font-size);
 }
