--- a/src/css/pages/_journal.css
+++ b/src/css/pages/_journal.css
@@ -9,7 +9,7 @@ h1 {
 .content {
   display: flex;
   flex-direction: column;
-  margin: 0.5rem 1rem;
+  margin: 0 1rem;
   background-color: white;
 }
 
@@ -20,7 +20,7 @@ h1 {
   margin: 1rem;
   padding: 1rem;
   border-radius: 8px;
-  width: 315px;
+  width: auto;
   height: auto;
   gap: 2rem 0;
 }
@@ -47,7 +47,6 @@ h1 {
   background-color: var(--color-dark-orange);
   border: none;
   box-shadow: var(--main-btn-box-shadow);
-  margin-top: 3em;
   padding: 1rem 2rem;
   display: flex;
   justify-content: space-around;
@@ -69,12 +68,13 @@ h1 {
 }
 
 .cards > .cards_text--middle {
+  color: var(--color-dark-blue);
   font-size: 14px;
   font-weight: 600;
 }
 
 .cards > .cards_text--big {
+  color: var(--color-dark-blue);
   font-size: 16px;
   font-weight: 600;
-  color: #122e50;
 }
