--- a/src/css/pages/_teams.css
+++ b/src/css/pages/_teams.css
@@ -1,22 +1,3 @@
-/* RULESETS WHICH COULD BE UNSCOPED AGAIN */
-/* i.e. ruelsets that could go to _base.css instead  */
-
-/* TODO: ensure this goes to main.css !*/
-/* seems to produce the desired result at least on mobile */
-body.teams-area header {
-  flex-direction: column;
-  background-size: cover;
-  background-position: bottom;
-  background-repeat: repeat-x;
-}
-
-body.teams-area main {
-  padding: 2rem;
-  background-color: #fff;
-}
-
-/* TRUY AREA SPECIFIC RULESETS */
-
 body.teams-area main .box__team {
   background-color: #fff;
   width: auto;
